--- a/lambda.html
+++ b/lambda.html
@@ -16,7 +16,7 @@
   <div class="container">
     <h1>....</h1>
   </div>
-  <script src="lambda.js" charset="utf-8"></script>
+  <script src="js/lambda.js" charset="utf-8"></script>
 </body>
 <footer>
   www.roledice.com
